--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8081
+
+#----------------- H2 DataBase Configuration ----------------
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=lalit
+spring.datasource.password=siraswa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
