--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8082
 
+# Spring Boot Query Methods
+# https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#reference
+
 #----------------- H2 DataBase Configuration ----------------
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dcbapp
