--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8082
 
+welcome.message = Welcome to the world of Programming!!
+
 # Spring Boot Query Methods
 # https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#reference
 
