--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-server.port=8082
-
-welcome.message = Welcome to the world of Programming!!
-
-# Spring Boot Query Methods
-# https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#reference
-
-#----------------- H2 DataBase Configuration ----------------
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:dcbapp
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=lalit
-#spring.datasource.password=siraswa
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-#----------------- MySql DataBase Configuration ----------------
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
-spring.datasource.username=root
-spring.datasource.password=ro$iWx4x
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql: true
+#server.port=8082
+#
+#welcome.message = Welcome to the world of Programming!!
+#
+## Spring Boot Query Methods
+## https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#reference
+#
+##----------------- H2 DataBase Configuration ----------------
+##spring.h2.console.enabled=true
+##spring.datasource.url=jdbc:h2:mem:dcbapp
+##spring.datasource.driverClassName=org.h2.Driver
+##spring.datasource.username=lalit
+##spring.datasource.password=siraswa
+##spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+##----------------- MySql DataBase Configuration ----------------
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
+#spring.datasource.username=root
+#spring.datasource.password=ro$iWx4x
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
