--- a/spring-data-jpa-tutorial/src/main/resources/application.properties
+++ b/spring-data-jpa-tutorial/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/schooldb
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql = true
