--- a/spring-data-jpa-tutorial/src/main/resources/application.properties
+++ b/spring-data-jpa-tutorial/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/schooldb
 spring.datasource.username=root
-spring.datasource.password=ro$iWx4x
+spring.datasource.password=admin
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql = true
