OAuth2-Authorization-Server

--- a/spring-security-tutorial/pom.xml
+++ b/spring-security-tutorial/pom.xml
@@ -22,6 +22,7 @@
 	<!--  Adding the modules	-->
 	<modules>
 		<module>spring-security-client</module>
+		<module>Oauth-authorization-server</module>
 	</modules>
 
 	<dependencies>
